Fix links highlighting & fix pyramid visibility

--- a/assets/elements/links.sass
+++ b/assets/elements/links.sass
@@ -1,10 +1,4 @@
 @import '../variables/colors'
 
 a
-    &:link, &:visited
-        color: black
-
-    &:hover
-        color: $app-highlight-color
-
-    text-decoration: none
+    color: $app-highlight-color
